# yt-dont-recommend

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  clickbait-config.example.yaml  config.example.yaml  conftest.py  keyword-block.example.txt  pyproject.toml  requirements.txt  test_yt_dont_recommend.py  yt_dont_recommend.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-changelog.yml  pr-labels-ci.yml  pr-labels.yml  publish.yml  qa-gate.yml  sync-labels.yml
docs/superpowers/plans/: 2026-04-28-keyword-blocking.md
docs/superpowers/specs/: 2026-04-23-applescript-injection-fix-design.md  2026-04-23-source-trust-hardening-design.md  2026-04-28-keyword-blocking-design.md
experiments/: README.md  classify_titles.py  classify_with_transcript.py  probe_not_interested.py  probe_thumbnail.py  probe_transcript.py
scripts/: smoke-test.sh
src/yt_dont_recommend/: __init__.py  blocklist.py  browser.py  cli.py  clickbait.py  config.py  diagnostics.py  keywords.py  scheduler.py  state.py  unblock.py
tests/: conftest.py  test_blocklist.py  test_browser.py  test_cli.py  test_clickbait.py  test_config.py  test_init_wrappers.py  test_keywords.py  test_scheduler.py  test_selectors.py  test_state.py  test_yt_dont_recommend.py
tests/fixtures/: keyword-block-fixture.txt
