[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-dont-recommend"
version = "0.2.7"
requires-python = ">=3.10"
description = "Bulk-train YouTube's recommendation algorithm via 'Don't recommend channel' — works on Fire TV, mobile, and smart TVs"
readme = {file = "README-pypi.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
dependencies = [
    "playwright",
]

[project.urls]
Homepage = "https://github.com/cmeans/yt-dont-recommend"
"Bug Tracker" = "https://github.com/cmeans/yt-dont-recommend/issues"
Changelog = "https://github.com/cmeans/yt-dont-recommend/releases"

[project.optional-dependencies]
dev = [
    "pytest",
    "pyyaml",
]
clickbait = [
    "ollama",
    "pyyaml",
    "youtube-transcript-api",
]

[project.scripts]
yt-dont-recommend = "yt_dont_recommend.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_dont_recommend"]
