[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-dont-recommend"
version = "0.4.2"
requires-python = ">=3.10"
description = "Bulk-train YouTube's recommendation algorithm via 'Don't recommend channel' — works on Fire TV, mobile, and smart TVs"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
authors = [
    {name = "Chris Means", email = "chris.a.means@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Utilities",
]
dependencies = [
    "playwright",
]

[project.urls]
Homepage = "https://github.com/cmeans/yt-dont-recommend"
"Bug Tracker" = "https://github.com/cmeans/yt-dont-recommend/issues"
Changelog = "https://github.com/cmeans/yt-dont-recommend/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov>=7.0",
    "pyyaml",
    "ruff",
]
clickbait = [
    "ollama",
    "pyyaml",
    "youtube-transcript-api",
]

[project.scripts]
yt-dont-recommend = "yt_dont_recommend.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_dont_recommend"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by formatter if we adopt it later
]

[tool.ruff.lint.per-file-ignores]
# __init__.py re-exports names for the _pkg() late-import pattern.
"src/yt_dont_recommend/__init__.py" = ["F401", "E402"]
# Sub-modules use late imports to avoid circular dependencies.
"src/yt_dont_recommend/blocklist.py" = ["E402"]
"src/yt_dont_recommend/browser.py" = ["E402"]
"src/yt_dont_recommend/clickbait.py" = ["E402"]
"src/yt_dont_recommend/diagnostics.py" = ["E402"]
"src/yt_dont_recommend/unblock.py" = ["E402"]
"src/yt_dont_recommend/scheduler.py" = ["E402"]
"src/yt_dont_recommend/cli.py" = ["E402"]
"src/yt_dont_recommend/state.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["yt_dont_recommend"]

[tool.coverage.run]
source = ["yt_dont_recommend"]

[tool.coverage.report]
show_missing = true
skip_empty = true
# Regression guard: pure-logic modules are at 100%; browser.py/diagnostics.py
# are Playwright-heavy and intentionally left at their natural (low) coverage.
# 60% gives headroom for browser-module churn without flaking on PRs that don't
# touch coverage at all. No exclude_lines — any line reported as missed has to
# be covered by a real test, deleted as dead code, or refactored to be testable.
fail_under = 60
